--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     implementation "android.arch.persistence.room:runtime:$room_version"
     implementation "com.android.support:support-v4:$androidSupportVersion"
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
 
     def lifecycle_version = "1.1.1"
