--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.curtisgetz.marsexplorer">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".utils.MarsExplorerApp"
@@ -19,17 +19,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.explore.RoverExploreActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden">
+        <activity
+            android:name=".ui.explore.RoverExploreActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
 
-        </activity>
-        <service android:name=".data.rover_manifest.RoverManifestJobService"
+        <service
+            android:name=".data.rover_manifest.RoverManifestJobService"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
 
+        <activity
+            android:name=".ui.explore_detail.ExploreDetailActivity"
+            android:label="@string/title_activity_explore_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
