--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.curtisgetz.marsexplorer">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:name=".utils.MarsExplorerApp"
@@ -21,7 +22,7 @@
         </activity>
         <activity
             android:name=".ui.explore.RoverExploreActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
 
         <service
             android:name=".data.rover_manifest.RoverManifestJobService"
@@ -34,7 +35,8 @@
         <activity
             android:name=".ui.explore_detail.ExploreDetailActivity"
             android:label="@string/title_activity_explore_detail"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.explore.MarsExploreActivity"></activity>
     </application>
 
 </manifest>
