--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,16 +31,27 @@
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
-        <service android:name=".data.fcm.MarsFirebaseMessagingService" >
+        <service android:name=".data.fcm.MarsFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <service android:name=".ui.widget.FactWidgetProvider$UpdateService" />
 
-        <activity
-            android:name=".ui.explore_detail.ExploreDetailActivity"/>
+        <activity android:name=".ui.explore_detail.ExploreDetailActivity"
+            />
+        <activity android:name=".ui.explore.MarsExploreActivity"
+            android:parentActivityName=".ui.main.MainActivity"/>
 
-        <activity android:name=".ui.explore.MarsExploreActivity"></activity>
+        <receiver android:name=".ui.widget.FactWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/fact_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
