--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.curtisgetz.marsexplorer">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -22,7 +23,12 @@
         </activity>
         <activity
             android:name=".ui.explore.RoverExploreActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+            android:windowSoftInputMode="adjustResize|stateHidden"
+            android:parentActivityName=".ui.main.MainActivity"/>
+        <activity android:name=".ui.explore_detail.ExploreDetailActivity" />
+        <activity
+            android:name=".ui.explore.MarsExploreActivity"
+            android:parentActivityName=".ui.main.MainActivity" />
 
         <service
             android:name=".data.rover_manifest.RoverManifestJobService"
@@ -31,17 +37,20 @@
                 <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
-        <service android:name=".data.fcm.MarsFirebaseMessagingService">
+
+        <!-- ignore export error. FirebaseMessagingService performs security checks at runtime,
+             no need for explicit permissions despite exported="true" -->
+        <service
+            android:name=".data.fcm.MarsFirebaseMessagingService"
+
+            tools:ignore="ExportedService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name=".ui.widget.FactWidgetProvider$UpdateService" />
+        <service android:name=".ui.widget.FactWidgetJobService" />
 
-        <activity android:name=".ui.explore_detail.ExploreDetailActivity"
-            />
-        <activity android:name=".ui.explore.MarsExploreActivity"
-            android:parentActivityName=".ui.main.MainActivity"/>
+
 
         <receiver android:name=".ui.widget.FactWidgetProvider">
             <intent-filter>
@@ -52,6 +61,8 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/fact_widget_info" />
         </receiver>
+
+        <activity android:name=".ui.settings.SettingsActivity"/>
     </application>
 
 </manifest>
