--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'UdacityKey7'
+            storeFile file('C:/Users/curti/AndroidStudioProjects/MarsExplorer/kaystore.jks')
+            storePassword 'UdacityKey7'
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.curtisgetz.marsexplorer"
@@ -14,12 +22,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:appcompat-v7:$androidSupportVersion"
     implementation "com.android.support:support-media-compat:$androidSupportVersion"
     implementation "com.android.support:support-v4:$androidSupportVersion"
@@ -29,43 +38,25 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$androidSupportVersion"
     implementation "com.android.support:design:$androidSupportVersion"
     implementation "com.android.support:preference-v7:$androidSupportVersion"
-
-
-
-
-    def room_version = "1.1.1"
-
-
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    implementation "com.android.support:support-v4:$androidSupportVersion"
-    implementation 'com.android.support:support-v4:28.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
-
-    def lifecycle_version = "1.1.1"
-
-    // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-config:16.1.0'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-
-
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-
-
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-
-
+    def room_version = "1.1.1"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "com.android.support:support-v4:$androidSupportVersion"
+    implementation 'com.android.support:support-v4:28.0.0'
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    def lifecycle_version = "1.1.1"
+    // ViewModel and LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
-
 }
 apply plugin: 'com.google.gms.google-services'
